# fast42-rs

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  secrets_example.yaml
.cargo/: config.toml
examples/: secrets_example.yaml  users.rs
src/: configuration.rs  fast42.rs  lib.rs
