[package]
name = "fast42"
authors = ["Codam Coding College"]
description = "A super fast 42API connector 🚀"
version = "0.1.0"
edition = "2021"
license = "MIT"
keywords = ["fast42", "42api", "42-network", "42-school"]
categories = ["api-bindings"]
rust-version = "1.65.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.12", features = ["json"] }
tokio = { version = "1.21.2", features = ["full", "macros"] }
tower = { version = "0.4", features = ["full"] }
serde = { version = "1", features = ["derive"] }
secrecy = { version = "0.8", features = ["serde"] }
serde_json = { version = "1.0" }
retainer = "0.3"
futures = "0.3.25"
config = "0.13.3"
