[package]
name = "fast42"
version = "0.0.1"
authors = ["Codam Coding College <it@codam.nl>"]
description = "A super fast 42API connector 🚀"
repository = "https://github.com/codam-coding-college/fast42-rs"
edition = "2021"
license = "MIT"
keywords = ["42", "api", "rate-limit", "connector"]
categories = ["api-bindings"]
rust-version = "1.66.0"
include = [
    "**/*.rs",
    "Cargo.lock",
    "Cargo.toml",
    "LICENSE.txt",
    "README.md",
    ".gitignore",
    "examples/secrets_example.yaml"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.12", features = ["json"] }
tokio = { version = "1.21.2", features = ["full", "macros"] }
tower = { version = "0.4", features = ["full"] }
serde = { version = "1", features = ["derive"] }
secrecy = { version = "0.8", features = ["serde"] }
serde_json = { version = "1.0" }
retainer = "0.3"
futures = "0.3.25"
tracing = "0.1.37"

[dev-dependencies]
config = "0.13.3"
mockito = "0.31.1"
